calibre/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: calibre
    app.kubernetes.io/instance: calibre
    app.kubernetes.io/name: calibre
  name: calibre
  namespace: calibre
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calibre
  template:
    metadata:
      labels:
        app: calibre
        app.kubernetes.io/name: calibre
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - image: lscr.io/linuxserver/calibre-web:latest
        imagePullPolicy: Always
        name: calibre-web
        ports:
        - containerPort: 8083
          name: web
          protocol: TCP
        volumeMounts:
        - mountPath: "/books"
          readOnly: false
          name: smb
        - mountPath: "/config"
          readOnly: false
          name: config
      volumes:
        - name: smb
          persistentVolumeClaim:
            claimName: pvc-calibre-books-smb
        - name: config
          persistentVolumeClaim:
            claimName: pvc-calibre-config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: calibre
  name: calibre
  namespace: calibre
spec:
  ports:
  - name: web
    port: 8083
    targetPort: 8083
  selector:
    app: calibre
