calibre/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: calibre
  namespace: calibre
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`calibre.santos.party`)
      kind: Rule
      services:
        - name: calibre
          port: 8083
      middlewares:
        - name: default-headers
  tls:
    secretName: santos-party-tls
